--- a/articles/site-reliability-engineering/index.yml
+++ b/articles/site-reliability-engineering/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: dnblankedelman
   ms.author: dnb
   ms.date: 02/18/2020
-  ms.openlocfilehash: 18857c11887ef6934485602d0fcb7aaf2220721e
-  ms.sourcegitcommit: 849bb1729b89d075eed579aa36395bf4d29f3bd9
+  ms.openlocfilehash: f46fd0f8323b483cdbec072bcda0346d0b4c2ab7
+  ms.sourcegitcommit: 5a8c8ac84c36859611158892422fc66395f808dc
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/28/2020
-  ms.locfileid: "82185075"
+  ms.lasthandoff: 06/10/2020
+  ms.locfileid: "84659870"
 highlightedContent:
   items:
   - title: SRE 简介：什么是 SRE？ (1/3)
@@ -43,11 +43,13 @@ productDirectory:
       text: 用于提高可靠性的部署实践
     - url: https://myignite.techcommunity.microsoft.com/sessions/83001
       text: 为增长做准备：容量规划和扩展
-  - title: SRE 在线课程简介
+  - title: SRE 在线课程
     imageSrc: ./media/index/learn.svg
     links:
     - url: https://docs.microsoft.com/learn/modules/intro-to-site-reliability-engineering/
-      text: 在免费的在线课程中学习 SRE 的基础知识
+      text: 站点可靠性工程简介
+    - url: https://docs.microsoft.com/learn/paths/improve-reliability-modern-operations/
+      text: 通过现代操作实践提高可靠性
   - title: SRE 资源
     imageSrc: ./media/index/reference.svg
     links:
@@ -118,6 +120,9 @@ conceptualContent:
     - url: https://docs.microsoft.com/azure/azure-monitor/azure-monitor-app-hub
       itemType: get-started
       text: 使用 Application Insights 管理应用程序性能
+    - url: https://docs.microsoft.com/azure/azure-monitor/app/distributed-tracing
+      itemType: get-started
+      text: 将分布式跟踪与 Azure Monitor 配合使用
     - url: https://docs.microsoft.com/azure/azure-monitor/app/distributed-tracing
       itemType: get-started
       text: 将分布式跟踪与 Azure Monitor 配合使用
