--- a/articles/azure-arc/kubernetes/toc.yml
+++ b/articles/azure-arc/kubernetes/toc.yml
@@ -14,11 +14,11 @@
           href: use-gitops-connected-cluster.md
         - name: 将 GitOps 与 Helm 结合使用
           href: use-gitops-with-helm.md
-        - name: 使用 Azure Policy
+        - name: 通过 Azure Policy 强制使用 GitOps
           href: use-azure-policy.md
         - name: 用于容器的 Azure Monitor
           href: deploy-azure-monitor-for-containers.md
-        - name: 安装 Azure Policy 加载项
+        - name: 使用 Azure Policy 的许可控制策略
           href: ../../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/kubernetes/toc.json
         - name: 部署 IoT 工作负载
           href: deploy-azure-iot-edge-workloads.md
