--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -302,6 +302,8 @@
           href: connector-dynamics-ax.md
         - name: Dynamics CRM
           href: connector-dynamics-crm-office-365.md
+        - name: Excel 格式
+          href: format-excel.md
         - name: 文件系统
           href: connector-file-system.md
         - name: FTP
