--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -58,6 +58,8 @@
       href: how-to-create-azure-function.md
     - name: 从 IoT 中心引入遥测数据
       href: how-to-ingest-iot-hub-data.md
+    - name: 与 Azure Maps 集成
+      href: how-to-integrate-maps.md
 - name: 参考
   items:
     - name: 数字孪生 REST API
