--- a/articles/static-web-apps/TOC.yml
+++ b/articles/static-web-apps/TOC.yml
@@ -33,6 +33,8 @@
       href: add-api.md
     - name: 配置应用设置
       href: application-settings.md
+    - name: 配置前端框架和库
+      href: front-end-frameworks.md
 - name: 教程
   items:
     - name: 从静态站点生成器发布
