commit translated contents

--- a/articles/azure-sql/managed-instance/index.yml
+++ b/articles/azure-sql/managed-instance/index.yml
@@ -5,19 +5,19 @@ metadata:
   title: Azure SQL 托管实例文档
   description: 查找有关 Azure SQL 托管实例（Azure 中基于 Microsoft SQL Server 最新稳定版的托管实例）的文档。
   services: sql-database
-  ms.service: sql-database
-  ms.subservice: single-database
+  ms.service: sql-managed-instance
+  ms.subservice: operations
   ms.topic: landing-page
   author: MashaMSFT
   ms.author: mathoma
   ms.reviewer: carlrab
   ms.date: 05/27/2020
-  ms.openlocfilehash: 967bf5461a1f4e6cf8869bcea6a0e7c74204d1a1
-  ms.sourcegitcommit: 053e5e7103ab666454faf26ed51b0dfcd7661996
+  ms.openlocfilehash: 358c6e85b7a2d6e54b72bb94c00e86f330decd19
+  ms.sourcegitcommit: 537c539344ee44b07862f317d453267f2b7b2ca6
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "84023613"
+  ms.lasthandoff: 06/11/2020
+  ms.locfileid: "84708767"
 landingContent:
 - title: Azure SQL 托管实例
   linkLists:
