--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -128,6 +128,8 @@
           href: concept-data.md
         - name: 数据引入
           href: concept-data-ingestion.md
+        - name: 数据处理
+          href: concept-optimize-data-processing.md
     - name: 模型定型
       displayName: 'run config, estimator, machine learning pipeline, ml pipeline, train model'
       href: concept-train-machine-learning-model.md
