--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -15,6 +15,8 @@
       href: sdk-learning-loop.md
 - name: 教程
   items:
+    - name: 使用 Web 应用
+      href: tutorial-use-personalizer-web-app.md
     - name: 使用 Azure Notebook
       href: tutorial-use-azure-notebook-generate-loop-data.md
       displayName: 'jupyter, notebook, python, cell, graph, chart, aggregate, model update frequency'
