--- a/articles/cognitive-services/personalizer/index.yml
+++ b/articles/cognitive-services/personalizer/index.yml
@@ -3,7 +3,7 @@ title: 个性化体验创建服务文档
 summary: 了解如何使用个性化体验创建服务来让应用程序选择要显示给用户的最佳体验，并从其实时行为中学习信息。
 metadata:
   ms.topic: landing-page
-  ms.date: 05/01/2020
+  ms.date: 06/11/2020
   ms.author: nitinme
   author: nitinme
   ms.service: cognitive-services
@@ -12,12 +12,12 @@ metadata:
   title: 个性化体验创建服务文档
   titleSuffix: Azure Cognitive Services
   description: Azure 个性化体验创建服务是基于云的 API 服务，可让你选择要显示给用户的最佳体验，并从其实时行为中学习信息。
-  ms.openlocfilehash: ef18921e9211bb1a3659fffc84bde922d500d0b0
-  ms.sourcegitcommit: bb0afd0df5563cc53f76a642fd8fc709e366568b
+  ms.openlocfilehash: 0c8e99ab2817cd9aaa2de60b9996b3d47b10a1ff
+  ms.sourcegitcommit: a8928136b49362448e992a297db1072ee322b7fd
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83586314"
+  ms.lasthandoff: 06/11/2020
+  ms.locfileid: "84717911"
 landingContent:
 - title: 关于个性化体验创建服务
   linkLists:
@@ -45,6 +45,12 @@ landingContent:
       url: concepts-features.md
     - text: 如何计算奖励
       url: concept-rewards.md
+  - linkListType: tutorial
+    links:
+    - text: 在 .NET web 应用中使用个性化体验创建服务
+      url: tutorial-use-personalizer-web-app.md
+    - text: 将个性化体验创建服务用于 Azure 笔记本
+      url: tutorial-use-azure-notebook-generate-loop-data.md
   - linkListType: how-to-guide
     links:
     - text: 如何创建和配置个性化体验创建服务
