--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -22,6 +22,9 @@
           href: functions-create-your-first-function-visual-studio.md
         - name: 命令行
           href: functions-create-first-azure-function-azure-cli.md
+        - name: ARM 模板
+          displayName: Resource Manager
+          href: functions-create-first-function-resource-manager.md
     - name: 连接到存储
       items:
         - name: Visual Studio Code
