--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -235,7 +235,7 @@
         - name: 数据加载
           items:
             - name: 概述
-              href: sql/data-loading-overview.md
+              href: ./sql-data-warehouse/design-elt-data-loading.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: 最佳做法
               href: sql/data-loading-best-practices.md
             - name: 列存储压缩
